--- a/settings/installer/packstack.yml
+++ b/settings/installer/packstack.yml
@@ -23,6 +23,7 @@ job:
         - /var/tmp/packstack
         - /root/
         - /var/log/
+        - /var/lib/mysql
         - /etc/nova
         - /etc/ceilometer
         - /etc/cinder
