--- a/settings/installer/staypuft/topology/vagrant.yml
+++ b/settings/installer/staypuft/topology/vagrant.yml
@@ -31,3 +31,29 @@ staypuft:
       prefix: 172.16.16
       public_network: false
       boot: 0
+
+  deploy:
+    ip:
+    login:
+      username: admin
+      password: redhat
+    deployment_settings:
+      name: "test"
+      description: ""
+      layout_name: "Controller / Compute"
+      networking: "neutron"
+      amqp_provider: "rabbitmq"
+      platform: "rhel7"
+      single_password: "passwd123"
+      single_password_confirmation: "passwd123"
+    services_configuration:
+        neutron:
+          network_segmentation: "vxlan"
+        glance:
+          driver_backend: "local"
+        cinder:
+           backend_nfs: "true"
+           nfs_uri: "192.168.0.1:/cinder"
+    deployment_config: default_conf01.yml
+    start_node: 0
+    end_node: 4
