--- a/settings/product/rdo/version/icehouse/workaround/fedora-20.yml
+++ b/settings/product/rdo/version/icehouse/workaround/fedora-20.yml
@@ -2,3 +2,4 @@ workaround:
     default_floating_pool: true
     nova_objectstore_install: true
     s3_objectstore_endpoint: true
+    quickstack_cinder: true
