--- a/settings/product/rdo/version/juno.yml
+++ b/settings/product/rdo/version/juno.yml
@@ -21,8 +21,14 @@ product:
                 '7.0.1406': !join [*repo_url, epel-7]
             Fedora:
                 '20': !join [*repo_url, fedora-20]
+                '21': !join [*repo_url, fedora-21]
 
             RedHat:
                 '6.5': !join [*repo_url, epel-6]
+                '6.6': !join [*repo_url, epel-6]
                 '7.0': !join [*repo_url, epel-7]
 
+tempest:
+    rpm:
+        version: 20140805
+    use_custom_repo: false
